syntax = "proto3";

package hdwallet_api;

option go_package = "github.com/crypto-bundle/bc-wallet-tron-hdwallet/pkg/grpc";

enum WalletMakerStrategy {
  PLACEHOLDER_STRATEGY_TYPE = 0;
  SINGLE_MNEMONIC_STRATEGY_TYPE = 1;
  MULTIPLE_MNEMONIC_STRATEGY_TYPE = 2;
}

message DerivationAddressIdentity {
  uint32 AccountIndex = 1;
  uint32 InternalIndex = 2;
  uint32 AddressIndex = 3;

  string Address = 4;
}

message GetEnabledWalletsRequest {
}

message MnemonicWalletIdentity {
  string WalletUUID = 1;
  string WalletHash = 2;
}

message MnemonicWalletData {
  MnemonicWalletIdentity Identity = 1;
  bool IsHot = 2;
}

message WalletIdentity {
  string WalletUUID = 1;
}

message WalletBookmarks {
  uint32 HotWalletIndex = 1;
  repeated uint32 NonHotWalletIndexes = 2;
}

message WalletData {
  WalletIdentity Identity = 1;
  string Title = 2;
  string Purpose = 3;
  WalletMakerStrategy Strategy = 4;
  uint32 MnemonicWalletCount = 5;
  WalletBookmarks Bookmarks = 6;
  repeated MnemonicWalletData MnemonicWallets = 7;
}

message GetEnabledWalletsResponse {
  uint32 WalletsCount = 1;
  repeated WalletData Wallets = 2;
}

message AddNewWalletRequest {
  string Title = 1;
  string Purpose = 2;
  WalletMakerStrategy Strategy = 3;
}

message AddNewWalletResponse {
  WalletData Wallet = 1;
}

message DerivationAddressRequest {
  WalletIdentity WalletIdentity = 1;
  MnemonicWalletIdentity MnemonicIdentity = 2;
  WalletSessionIdentity SessionIdentity = 3;
  DerivationAddressIdentity AddressIdentity = 4;
}

message DerivationAddressResponse {
  WalletIdentity WalletIdentity = 1;
  MnemonicWalletIdentity MnemonicIdentity= 2;
  WalletSessionIdentity SessionIdentity = 3;
  DerivationAddressIdentity AddressIdentity = 4;
}

message RangeRequestUnit {
  uint32 AccountIndex = 3;
  uint32 InternalIndex = 4;
  uint32 AddressIndexFrom = 5;
  uint32 AddressIndexTo = 6;
}

message DerivationAddressByRangeRequest {
  WalletIdentity WalletIdentity = 1;
  MnemonicWalletIdentity MnemonicIdentity = 2;
  repeated RangeRequestUnit Ranges = 3;
}

message DerivationAddressByRangeResponse {
  WalletIdentity WalletIdentity = 1;
  MnemonicWalletIdentity MnemonicIdentity= 2;
  uint64 AddressIdentitiesCount = 3;
  repeated DerivationAddressIdentity AddressIdentities = 4;
}

message SignTransactionRequest {
  string WalletUUID = 1;
  string MnemonicWalletUUID = 2;
  DerivationAddressIdentity AddressIdentity = 3;
  WalletSessionIdentity SessionIdentity = 4;
  bytes CreatedTxData = 5;
}

message SignTransactionResponse {
  WalletIdentity WalletIdentity = 1;
  MnemonicWalletIdentity MnemonicIdentity= 2;
  WalletSessionIdentity SessionIdentity = 3;
  DerivationAddressIdentity TxOwnerIdentity = 4;
  bytes SignedTxData = 5;
}

message GetWalletInfoRequest {
  WalletIdentity WalletIdentity = 1;
}

message GetWalletInfoResponse {
  WalletIdentity WalletIdentity = 1;
  WalletData WalletInfo = 2;
}

message WalletSessionIdentity {
  string SessionUUID = 1;
}

message StartWalletSessionRequest {
  string WalletUUID = 1;
  string MnemonicWalletUUID = 2;
}

message StartWalletSessionResponse {
  WalletIdentity WalletIdentity = 1;
  MnemonicWalletIdentity MnemonicIdentity = 2;
  WalletSessionIdentity SessionIdentity = 3;
  uint64 SessionStartedAt = 4;
  uint64 SessionExpiredAt = 5;
}

message GetWalletSessionRequest {
  string WalletUUID = 1;
  string MnemonicWalletUUID = 2;
}

message GetWalletSessionResponse {
  WalletIdentity WalletIdentity = 1;
  MnemonicWalletIdentity MnemonicIdentity = 2;
  WalletSessionIdentity SessionIdentity = 3;
  uint64 SessionStartedAt = 4;
  uint64 SessionExpiredAt = 5;
}

service HdWalletManagerApi {
  rpc AddNewWallet                      (AddNewWalletRequest)                returns (AddNewWalletResponse) {}
  rpc GetWalletInfo                 (GetWalletInfoRequest)           returns (GetWalletInfoResponse) {}
  rpc GetEnabledWallets                 (GetEnabledWalletsRequest)           returns (GetEnabledWalletsResponse) {}
  rpc GetDerivationAddress              (DerivationAddressRequest)           returns (DerivationAddressResponse) {}
  rpc GetDerivationAddressByRange       (DerivationAddressByRangeRequest)    returns (DerivationAddressByRangeResponse) {}
  rpc StartWalletSession                (StartWalletSessionRequest)    returns (StartWalletSessionResponse) {}
  rpc GetWalletSession                  (GetWalletSessionRequest)   returns (GetWalletSessionResponse) {}
  rpc SignTransaction                   (SignTransactionRequest)    returns (SignTransactionResponse) {}
}

message GenerateMnemonicRequest {
  MnemonicWalletIdentity MnemonicIdentity = 1;
}

message GenerateMnemonicResponse {
  MnemonicWalletIdentity MnemonicIdentity = 1;
  bytes EncryptedMnemonicData = 2;
}

message LoadMnemonicRequest {
  MnemonicWalletIdentity MnemonicIdentity = 1;
}

message LoadMnemonicResponse {
  MnemonicWalletIdentity MnemonicIdentity = 1;
}

message UnLoadMnemonicRequest {
  MnemonicWalletIdentity MnemonicIdentity = 1;
}

message UnLoadMnemonicResponse {
  MnemonicWalletIdentity MnemonicIdentity = 1;
}

service HdWalletApi {
  rpc GenerateMnemonic                 (GenerateMnemonicRequest)           returns (GenerateMnemonicResponse) {}
  rpc LoadMnemonic                 (LoadMnemonicRequest)           returns (LoadMnemonicResponse) {}
  rpc UnLoadMnemonic                 (UnLoadMnemonicRequest)           returns (UnLoadMnemonicResponse) {}
  rpc GetDerivationAddress              (DerivationAddressRequest)           returns (DerivationAddressResponse) {}
  rpc GetDerivationAddressByRange       (DerivationAddressByRangeRequest)    returns (DerivationAddressByRangeResponse) {}
  rpc SignTransaction                   (SignTransactionRequest)    returns (SignTransactionResponse) {}
}